--- a/frontend/index.html
+++ b/frontend/index.html
@@ -565,7 +565,7 @@
     >
 
     <script>
-      const API_BASE_URL = "http://127.0.0.1:8000/api";
+      const API_BASE_URL = "https://hankraft-production.up.railway.app/api/";
 
       document.getElementById("year").textContent = new Date().getFullYear();
 
