added contact number

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,10 +11,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+
     <link rel="icon" href="favicon.ico" />
     <style>
       html {
@@ -557,7 +563,7 @@
 
     <!-- WhatsApp Float -->
     <a
-      href="https://wa.me/2347065007303"
+      href="https://wa.me/2349053125813"
       class="whatsapp-float"
       title="Connect on WhatsApp"
       aria-label="WhatsApp"
@@ -746,7 +752,7 @@
         const msg = `Hello HanKraft LTD,%0A%0AI'm ${name} (${email})%0A%0AService: ${service}%0A%0AProject Details: ${details}`;
 
         setTimeout(() => {
-          window.open(`https://wa.me/2347065007303?text=${msg}`, "_blank");
+          window.open(`https://wa.me/2349053125813?text=${msg}`, "_blank");
 
           contactForm.reset();
           submitText.textContent = "Send Inquiry";
